--- a/style.css
+++ b/style.css
@@ -8,3 +8,21 @@ body{
     width: 100%;
     height: 100vh;
 }
+.background{
+    width: max(200vw, 200vh);
+    aspect-ratio: 1/1;
+    position: fixed;  
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0);
+    z-index: 0;
+    background-image: conic-gradient(rgb(1, 87, 103), transparent);
+    animation: rotate 10s linear  infinite;
+}
+
+@keyframes rotate {
+    to{
+        transform: translate(-50%, -50%) rotate(360deg);
+
+    }
+}
